.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0b2 - Unreleased
------------------

- Made the core content types use CSS sprites instead of individual images,
  which cuts down the number of image HTTP requests from 11 to 2.
  This fixes http://dev.plone.org/plone/ticket/10403
  [limi]

- Cleaned up the type descriptions, and removed the ones where that are 
  self-evident or redundant.
  [limi]

- Fix several issues in the RSS template: don't get the logo name from
  base_properties, correctly fetch the full text and last modified date, and
  only specify the publishing date in the output.
  [davisagli]

- Add and adapt tests for moving dates bug which was caused by date conversion
  without respect to Daylight Saving Times.
  Fix for http://dev.plone.org/plone/ticket/10141, refs r12413.
  [thet]

- Removed msgid for "Site Setup" message in portlet_prefs.pt
  and plone_control_panel.pt.
  [vincentfretin]

- Added in support WebKit- and Gecko-based small-screen devices 
  (iPhone, Android, Firefox Mobile)
  [limi]

- Make prefs_main_template fill portlets_one_slot instead of column_one_slot
  to add its portlet, for compatibility with Sunburst.  Also make it
  unnecessary for custom configlet templates to set display_border.
  [davisagli]

- Adjusted viewlet configuration so that the Sunburst theme uses the viewlets
  defined in plone.app.layout, and the Classic theme overrides that
  configuration to achieve the old viewlet positions.
  [davisagli]

- batch_macros.pt: Use request/ACTUAL_URL instead of context/absolute_url as
  batching base url so that batching works for diffent views and FSPageTemplates
  appended to context/absolute_url.
  The approach ${context/absolute_url}/${template/getId} didn't work for views.
  [thet]

- Fix columns in prefs_main_template.
  [davisagli]
